minification fichiers, corrections w3c

--- a/contact.html
+++ b/contact.html
@@ -150,9 +150,9 @@
 		<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
 			<section class="container py-2 mx-0 text-center col-12 text-dark">
 				<!-- TITRE -->
-				<h5 class="col-12 my-2 h5">
+				<p class="col-12 my-2 h5">
 					La chouette agence - Agence web basée à Lyon.
-				</h5>
+				</p>
 				<!-- RÉSEAUX SOCIAUX -->
 				<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 					<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
@@ -171,6 +171,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 		<script src="js/jqBootstrapValidation.js"></script>
-		<script src="js/formHandler.js"></script>
+		<script src="js/formHandler.min.js"></script>
 	</body>
 </html>
