--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -191,9 +191,9 @@
 		<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
 			<section class="container py-2 mx-0 text-center col-12 text-dark">
                 <!-- TITRE -->
-				<h5 class="col-12 my-2 h5">
+				<p class="col-12 my-2 h5">
 					La chouette agence - Agence web basée à Lyon. 
-                </h5>
+                </p>
                 <!-- RÉSEAUX SOCIAUX -->
 				<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 					<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
