--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 					</div>
 					<div class="col-12 col-sm-4 col-lg-3 my-5">
 						<span class="icon-presentation icon-dark-slate-blue icon-lg"></span>
-						<h3 class="my-3 h5">STRATÉGIE</h2>
+						<h3 class="my-3 h5">STRATÉGIE</h3>
 						<p>
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos <strong>objectifs commerciaux</strong> afin de vous proposer le meilleur design possible.
 						</p>
 					</div>
 					<div class="col-12 col-sm-4 col-lg-3 my-5">
 						<span class="icon-edit icon-dark-slate-blue icon-lg"></span>
-						<h3 class="my-3 h5">ILLUSTRATIONS</h2>
+						<h3 class="my-3 h5">ILLUSTRATIONS</h3>
 						<p>
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre <strong>équipe de graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.
 						</p>
@@ -200,9 +200,9 @@
 		<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
 			<section class="container py-2 mx-0 text-center col-12 text-dark">
 				<!-- TITRE -->
-				<h5 class="col-12 my-2 h5">
+				<p class="col-12 my-2 h5">
 					La chouette agence - Agence web basée à Lyon.
-				</h5>
+				</p>
 				<!-- RÉSEAUX SOCIAUX -->
 				<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 					<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
