--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
 		</main>
 		<!-- FOOTER -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
-			<section class="container py-2 mx-0 text-center col-12 text-dark">
+			<div class="container py-2 mx-0 text-center col-12 text-dark">
 				<!-- TITRE -->
 				<p class="col-12 my-2 h5">
 					La chouette agence - Agence web basée à Lyon.
@@ -165,7 +165,7 @@
 					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3" title="Mentions légales de La chouette agence"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
 					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3" title="Page contact de La chouette agence">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
 				</div>
-			</section>
+			</div>
 		</footer>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
