correction liens + changement adresse formulaire pour test pendant soutenance

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="col-10 col-lg-4 text-center black-background mx-auto">
 					<img src="img/logo.png" class="center-block image-resize-mode pb-4" width="100" alt="Logo de La chouette agence">
 					<h1 class="text-center hero-bloc-text tc-white h2 ">La chouette agence.</h1>
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" title="Page contact de La chouette agence">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine">Contact</a>
 				</div>
 			</section>
 		</header>
@@ -137,7 +137,7 @@
 						<br>
 						Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
 					</p>
-					<a class="text-white bold-link" href="contact.html" title="Page contact de La chouette agence">Contactez notre équipe</a>
+					<a class="text-white bold-link" href="contact.html">Contactez notre équipe</a>
 				</div>
 			</div>
 			<!-- PORTFOLIO -->
@@ -190,7 +190,7 @@
 				<div class="container text-center black-background col-12 col-md-5">
 					<p class="mb-3 tc-white h4">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</p>
 					<div class="col-12">
-						<a href="contact.html" class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero" title="Page contact de La chouette agence">Contact</a>
+						<a href="contact.html" class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -212,8 +212,8 @@
 						<a class="social" href="https://www.instagram.com/Lachouetteagence" title="Lien vers le compte instagram de La chouette agence"><span class="fab fa-instagram icon-md"></span></a>
 					</div>
 					<!-- AUTRES LIENS -->
-					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3" title="Mentions légales de La chouette agence"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
-					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3" title="Page contact de La chouette agence">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
+					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
+					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
 				</div>
 			</div>
 		</footer>
