--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -203,8 +203,8 @@
 						<a class="social" href="https://www.instagram.com/Lachouetteagence" title="Lien vers le compte instagram de La chouette agence"><span class="fab fa-instagram icon-md"></span></a>
 					</div>
 					<!-- AUTRES LIENS -->
-					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3" title="Mentions légales de La chouette agence"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
-					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3" title="Page contact de La chouette agence">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
+					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
+					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
 				</div>
 			</div>
 		</footer>
